stiforprussia.com (archived on 2017-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "uncategorized",
  "char_count": 2910,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.03,
  "homepage_snapshot_redirected_domain": "stiforp.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170627110117id_/https://www.stiforp.com/index",
  "homepage_snapshot_url": "https://web.archive.org/web/20170626022259id_/http%3A//stiforprussia.com",
  "interval": "2017_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "stiforp.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170604085755id_/https%3A//www.stiforp.com/privacyPolicy",
  "policy_title": "stiforP :: Privacy Policy",
  "policy_url": "stiforp.com/privacyPolicy",
  "sha1": "2128ebca7c8aa5051170290a12c3b7c512f657be",
  "simhash": 785028865652364808,
  "simhash_updated": false,
  "site_hostname": "stiforprussia.com",
  "site_url": "http://stiforprussia.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170604085755",
  "word_count": 464,
  "year": 2017
}

--- a/s/st/sti/stiforprussia.com.html
+++ b/s/st/sti/stiforprussia.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the stiforprussia.com privacy policy that was archived on 2016-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160626141355id_/https%3A//www.stiforp.com/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stiforprussia.com privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604085755id_/https%3A//www.stiforp.com/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>stiforP :: Privacy Policy</title>
-<!-- server ip 192.168.1.31 -->
+<!-- server ip 192.168.100.142 -->
 <meta http-equiv="X-Frame-Options" content="deny">
 <link href="/htdocs/styles.css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
@@ -138,74 +138,74 @@ function googleTranslateElementInit() {
             <td background="/images/recentBG.gif" style="background-repeat:repeat-y">
              <table background="/images/recentBody.gif" style="background-repeat:no-repeat" width="179">
                             <tbody><tr>
-               <td class="recentLeftFlag"><img src="/images/flags/br.png" alt="Brazil" title="Brazil"></td>
-               <td class="recentLeftName">&nbsp;Ricardo&nbsp;
+               <td class="recentLeftFlag"><img src="/images/flags/rs.png" alt="Serbia" title="Serbia"></td>
+               <td class="recentLeftName">&nbsp;Milorad&nbsp;
 
 </td>
-               <td class="recentRight">08:27:58 </td>
+               <td class="recentRight">03:51:10 </td>
+              </tr>
+                            <tr>
+               <td class="recentLeftFlag"><img src="/images/flags/ph.png" alt="Philippines" title="Philippines"></td>
+               <td class="recentLeftName">&nbsp;Karisma&nbsp;
+
+</td>
+               <td class="recentRight">03:31:28 </td>
               </tr>
                             <tr>
                <td class="recentLeftFlag"><img src="/images/flags/in.png" alt="India" title="India"></td>
-               <td class="recentLeftName">&nbsp;Sakir&nbsp;al
+               <td class="recentLeftName">&nbsp;Subash&nbsp;b
 
 </td>
-               <td class="recentRight">08:20:14 </td>
+               <td class="recentRight">03:13:20 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/blank.png" alt="" title=""></td>
-               <td class="recentLeftName">&nbsp;Alvito&nbsp;d
+               <td class="recentLeftFlag"><img src="/images/flags/in.png" alt="India" title="India"></td>
+               <td class="recentLeftName">&nbsp;Dinesh&nbsp;g
 
 </td>
-               <td class="recentRight">07:58:48 </td>
+               <td class="recentRight">02:41:56 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/blank.png" alt="" title=""></td>
-               <td class="recentLeftName">&nbsp;Grek&nbsp;tul
+               <td class="recentLeftFlag"><img src="/images/flags/al.png" alt="Albania" title="Albania"></td>
+               <td class="recentLeftName">&nbsp;Donjeta&nbsp;
 
 </td>
-               <td class="recentRight">07:26:00 </td>
+               <td class="recentRight">02:18:49 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/blank.png" alt="" title=""></td>
-               <td class="recentLeftName">&nbsp;Darren&nbsp;b
+               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
+               <td class="recentLeftName">&nbsp;Sue&nbsp;blan
 
 </td>
-               <td class="recentRight">07:11:50 </td>
+               <td class="recentRight">02:15:22 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/gb.png" alt="United Kingdom" title="United Kingdom"></td>
-               <td class="recentLeftName">&nbsp;Edward&nbsp;h
+               <td class="recentLeftFlag"><img src="/images/flags/ke.png" alt="Kenya" title="Kenya"></td>
+               <td class="recentLeftName">&nbsp;Angela&nbsp;k
 
 </td>
-               <td class="recentRight">07:08:23 </td>
-              </tr>
-                            <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/mk.png" alt="Macedonia" title="Macedonia"></td>
-               <td class="recentLeftName">&nbsp;ивана&amp;Nb
-
-</td>
-               <td class="recentRight">06:47:23 </td>
+               <td class="recentRight">02:05:08 </td>
               </tr>
                             <tr>
                <td class="recentLeftFlag"><img src="/images/flags/rs.png" alt="Serbia" title="Serbia"></td>
-               <td class="recentLeftName">&nbsp;Vecko&nbsp;di
+               <td class="recentLeftName">&nbsp;Dejan&nbsp;ak
 
 </td>
-               <td class="recentRight">06:34:48 </td>
+               <td class="recentRight">01:43:43 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/mk.png" alt="Macedonia" title="Macedonia"></td>
-               <td class="recentLeftName">&nbsp;Toni&nbsp;ris
+               <td class="recentLeftFlag"><img src="/images/flags/za.png" alt="South Africa" title="South Africa"></td>
+               <td class="recentLeftName">&nbsp;Jaco&nbsp;clo
 
 </td>
-               <td class="recentRight">06:23:42 </td>
+               <td class="recentRight">01:38:41 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/mk.png" alt="Macedonia" title="Macedonia"></td>
-               <td class="recentLeftName">&nbsp;Anita&nbsp;se
+               <td class="recentLeftFlag"><img src="/images/flags/rs.png" alt="Serbia" title="Serbia"></td>
+               <td class="recentLeftName">&nbsp;Lazar&nbsp;me
 
 </td>
-               <td class="recentRight">06:19:13 </td>
+               <td class="recentRight">01:19:54 </td>
               </tr>
                            </tbody></table>
             </td>
