--- a/s/st/sti/stiforp.com.html
+++ b/s/st/sti/stiforp.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the stiforp.com privacy policy that was archived on 2016-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161223021713id_/https%3A//www.stiforp.com/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stiforp.com privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604085755id_/https%3A//www.stiforp.com/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>stiforP :: Privacy Policy</title>
-<!-- server ip 192.168.1.24 -->
+<!-- server ip 192.168.100.142 -->
 <meta http-equiv="X-Frame-Options" content="deny">
 <link href="/htdocs/styles.css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
@@ -138,74 +138,74 @@ function googleTranslateElementInit() {
             <td background="/images/recentBG.gif" style="background-repeat:repeat-y">
              <table background="/images/recentBody.gif" style="background-repeat:no-repeat" width="179">
                             <tbody><tr>
-               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Sweetsu&nbsp;
+               <td class="recentLeftFlag"><img src="/images/flags/rs.png" alt="Serbia" title="Serbia"></td>
+               <td class="recentLeftName">&nbsp;Milorad&nbsp;
 
 </td>
-               <td class="recentRight">20:07:22 </td>
+               <td class="recentRight">03:51:10 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/blank.png" alt="" title=""></td>
-               <td class="recentLeftName">&nbsp;Thegarc&nbsp;
+               <td class="recentLeftFlag"><img src="/images/flags/ph.png" alt="Philippines" title="Philippines"></td>
+               <td class="recentLeftName">&nbsp;Karisma&nbsp;
 
 </td>
-               <td class="recentRight">20:04:10 </td>
+               <td class="recentRight">03:31:28 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/ca.png" alt="Canada" title="Canada"></td>
-               <td class="recentLeftName">&nbsp;Maizien&nbsp;
+               <td class="recentLeftFlag"><img src="/images/flags/in.png" alt="India" title="India"></td>
+               <td class="recentLeftName">&nbsp;Subash&nbsp;b
 
 </td>
-               <td class="recentRight">19:50:48 </td>
+               <td class="recentRight">03:13:20 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Juliex&nbsp;i
+               <td class="recentLeftFlag"><img src="/images/flags/in.png" alt="India" title="India"></td>
+               <td class="recentLeftName">&nbsp;Dinesh&nbsp;g
 
 </td>
-               <td class="recentRight">19:39:14 </td>
+               <td class="recentRight">02:41:56 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Dellm&nbsp;ll
+               <td class="recentLeftFlag"><img src="/images/flags/al.png" alt="Albania" title="Albania"></td>
+               <td class="recentLeftName">&nbsp;Donjeta&nbsp;
 
 </td>
-               <td class="recentRight">19:36:18 </td>
-              </tr>
-                            <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Mario&nbsp;li
-
-</td>
-               <td class="recentRight">19:30:39 </td>
+               <td class="recentRight">02:18:49 </td>
               </tr>
                             <tr>
                <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Raymond&nbsp;
+               <td class="recentLeftName">&nbsp;Sue&nbsp;blan
 
 </td>
-               <td class="recentRight">19:27:35 </td>
+               <td class="recentRight">02:15:22 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/my.png" alt="Malaysia" title="Malaysia"></td>
-               <td class="recentLeftName">&nbsp;Ladi&nbsp;aga
+               <td class="recentLeftFlag"><img src="/images/flags/ke.png" alt="Kenya" title="Kenya"></td>
+               <td class="recentLeftName">&nbsp;Angela&nbsp;k
 
 </td>
-               <td class="recentRight">19:23:20 </td>
+               <td class="recentRight">02:05:08 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Jerrys&nbsp;r
+               <td class="recentLeftFlag"><img src="/images/flags/rs.png" alt="Serbia" title="Serbia"></td>
+               <td class="recentLeftName">&nbsp;Dejan&nbsp;ak
 
 </td>
-               <td class="recentRight">19:21:01 </td>
+               <td class="recentRight">01:43:43 </td>
               </tr>
                             <tr>
-               <td class="recentLeftFlag"><img src="/images/flags/us.png" alt="United States" title="United States"></td>
-               <td class="recentLeftName">&nbsp;Scubaki&nbsp;
+               <td class="recentLeftFlag"><img src="/images/flags/za.png" alt="South Africa" title="South Africa"></td>
+               <td class="recentLeftName">&nbsp;Jaco&nbsp;clo
 
 </td>
-               <td class="recentRight">19:13:01 </td>
+               <td class="recentRight">01:38:41 </td>
+              </tr>
+                            <tr>
+               <td class="recentLeftFlag"><img src="/images/flags/rs.png" alt="Serbia" title="Serbia"></td>
+               <td class="recentLeftName">&nbsp;Lazar&nbsp;me
+
+</td>
+               <td class="recentRight">01:19:54 </td>
               </tr>
                            </tbody></table>
             </td>
