--- a/s/sr/src/srchmgre.com.html
+++ b/s/sr/src/srchmgre.com.html
@@ -1,91 +1,12 @@
-<!--The following is the downloaded HTML source of the srchmgre.com privacy policy that was archived on 2016-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161201062941id_/http%3A//support.srchmgre.com/pp.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the srchmgre.com privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604184048id_/http%3A//support.srchmgre.com/pp.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
         <meta charset="utf-8">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
         <title>Privacy Policy</title>
-        <style>
-            body {
-                background-color: #f5f5f5;
-                font-family: 'Montserrat', sans-serif;
-                margin: 0;
-                // overflow: hidden;
-            }
-            body.legal header {
-                text-align: center;
-            }
-            header {
-                background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#246ab5), color-stop(100%,#2e99f2)); /* Chrome,Safari4+ */
-                background: -webkit-linear-gradient(-45deg,  #246ab5 0%,#2e99f2 100%); /*Chrome10+,Safari5.1+ */
-                background: linear-gradient(135deg,  #246ab5 0%,#2e99f2 100%); /* W3C */
-                float: left;
-                width: 100%;
-            }
-
-            body.legal section {
-                padding-top: 30px;
-            }
-
-            body.legal h1 {
-                margin: 0 auto;
-                max-width: 750px;
-                margin-top: 100px;
-                margin-bottom: 40px;
-            }
-
-            h1 {
-                color: #fff;
-                font-size: 50px;
-                font-weight: 900;
-                line-height: 1.1em;
-                margin: 0;
-                text-transform: uppercase;
-            }
-
-            h2 {
-                color: #fff;
-                font-size: 20px;
-                font-weight: 100;
-                margin: 0 0 40px;
-            }
-
-            section {
-                float: left;
-                width: 100%;
-            }
-
-            body.legal section div.centered {
-                margin: 0 auto;
-                padding: 10px;
-                max-width: 750px;
-            }
-
-            body.legal p {
-                text-align: justify;
-                margin-bottom: 20px;
-            }
-
-            a {
-                color: #717171;
-            }
-
-            p {
-                color: #575656;
-                font-family: helvetica;
-                font-size: 16px;
-                line-height: 1.35em;
-                letter-spacing: -0.5px;
-                margin: 0;
-            }
-
-            body.legal table{
-                margin: 20px 0;
-                border: 1px solid #c2c2c2;
-                width: 100%;
-            }          
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body class="legal">
         <header>
@@ -95,7 +16,7 @@
         <section>
             <div class="centered">
                 <p>
-                    This Privacy Policy (the <strong>"Policy"</strong>) describes the privacy practices with respect to the service ("Services", as such term is defined in the end user license agreement available here: <a href="http://support.srchmgre.com/eula.html">http://srchmgre.com/eula.html</a> ("EULA"). Please also review the EULA as your use of the Services is subject to the terms of this Policy and the EULA.
+                    This Privacy Policy (the <strong>"Policy"</strong>) describes the privacy practices with respect to the service ("Services", as such term is defined in the end user license agreement available here: <a href="http://support.searchmgr.com/eula.html">http://support.searchmgr.com/eula.html</a> ("EULA"). Please also review the EULA as your use of the Services is subject to the terms of this Policy and the EULA.
                 </p>
                 <p>
                     By downloading and/or installing and/or using the Services and/or by accepting this Policy and the EULA, you also consent to the following privacy policy of Yahoo, whose product is offered to you as part of the Services (as explained in the EULA). We recommend that you review such privacy policy. Yahoo privacy policy, available in the following link: <a href="https://info.yahoo.com/privacy/us/yahoo/search/details.html">https://info.yahoo.com/privacy/us/yahoo/search/details.html</a> (<strong>"Third Party's Policies"</strong>). Nothing herein shall deem to imply an affiliation between us and any third parties whose products are included
@@ -162,7 +83,7 @@
                     7. <strong><u>Contact Information</u></strong>
                 </p>
                 <p>
-                    If you have any questions or comments about this Policy, please contact us at <a href="mailto:support@searchmgr.com">v</a>.
+                    If you have any questions or comments about this Policy, please contact us at <a href="mailto:support@searchmgr.com">support@searchmgr.com</a>.
                 </p>
             </div>
         </section>
