viralands.com (archived on 2017-06-04)
{
  "alexa_rank": 799390,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 3802,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.87,
  "homepage_snapshot_redirected_domain": "viralands.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170325152905id_/http://www.viralands.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170325152905id_/http%3A//viralands.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "viralands.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170604194430id_/http%3A//www.viralands.com/privacy-policy",
  "policy_title": "Viralands - Privacy Policy",
  "policy_url": "viralands.com/privacy-policy",
  "sha1": "c863cd018e29ea63b924e08e7d756c0043ec7e26",
  "simhash": 8995522743521460243,
  "simhash_updated": false,
  "site_hostname": "viralands.com",
  "site_url": "http://viralands.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20170604194430",
  "word_count": 640,
  "year": 2017
}

--- a/v/vi/vir/viralands.com.html
+++ b/v/vi/vir/viralands.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the viralands.com privacy policy that was archived on 2016-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161203181811id_/http%3A//www.viralands.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viralands.com privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604194430id_/http%3A//www.viralands.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"><!--<![endif]--><head>
 
@@ -36,9 +36,12 @@
 
     <!-- General meta data -->
     <meta name="description" content="">
-    <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;appId=724894354212887&amp;version=v2.0"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js"></script><script type="text/javascript">
+    <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;appId=724894354212887&amp;version=v2.0"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"29a13a416c454176938dced5d453c8bd",petok:"3b0dab62528df47877e62c31e9d7c93825a2a10e-1480789091-1800",zone:"viralands.com",rocket:"0",apps:{"ga_key":{"ua":"UA-74711617-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-74711617-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);//]]>
+</script><script type="text/javascript">
+//<![CDATA[
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"455de0a66227e9b05345df2c2de6c56f",petok:"df7deec036dbee0bde1c33a3502d2e2fa7ef1641-1496605470-1800",zone:"viralands.com",rocket:"0",apps:{"ga_key":{"ua":"UA-74711617-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
 <link rel="canonical" href="http://www.viralands.com/privacy-policy">
@@ -81,26 +84,11 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
     <script src="http://cdn.viralands.com/assets/viralands.com/js/vendor/modernizr-2.8.3.min.js?v=2.0.1"></script>
     <script src="http://cdn.viralands.com/assets/viralands.com/js/all.min.js?v=2.0.1"></script>
 
-            <meta name="vrc" content="2016-12-03 12:05:32">
+            <meta name="vrc" content="2017-06-04 15:21:16">
     
         
 
 
-<script type="text/javascript">
-/* <![CDATA[ */
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-74711617-1']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
-/* ]]> */
-</script>
 </head>
 
 <body>
@@ -221,7 +209,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
         <div class="row">
             <div class="col-xs-6 col-sm-6 copyright-info">
                 <img src="http://cdn.viralands.com/assets/viralands.com/img/logo-white.png" alt="">
-                <p>Copyright © 2016 Viralands.com | All Rights Reserved</p>
+                <p>Copyright © 2017 Viralands.com | All Rights Reserved</p>
             </div>
             <div class="col-xs-6 col-sm-6 footer-menu text-right">
                 <ul>
@@ -290,6 +278,6 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </script>
 <!--- BLOCK END - Quantcast --->
 
-<script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
+<script>/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/\>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
 
 </body></html>
