--- a/d/de/des/designcart.org.html
+++ b/d/de/des/designcart.org.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the designcart.org privacy policy that was archived on 2016-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161219100547id_/http%3A//www.designcart.org/p/adsense-privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the designcart.org privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605001457id_/http%3A//www.designcart.org/p/adsense-privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr"><head>
+<link type="text/css" rel="stylesheet" href="https://www.blogger.com/static/v1/widgets/58827200-widget_css_bundle.css">
 <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Arimo" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" type="text/css">
@@ -12,6 +13,7 @@
 <link rel="alternate" type="application/atom+xml" title="Blogger Templates | Html5 Templates | WordPress Themes - Atom" href="http://www.designcart.org/feeds/posts/default">
 <link rel="alternate" type="application/rss+xml" title="Blogger Templates | Html5 Templates | WordPress Themes - RSS" href="http://www.designcart.org/feeds/posts/default?alt=rss">
 <link rel="service.post" type="application/atom+xml" title="Blogger Templates | Html5 Templates | WordPress Themes - Atom" href="https://www.blogger.com/feeds/6170198181237469453/posts/default">
+<!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
 <meta content="http://www.designcart.org/p/adsense-privacy-policy.html" property="og:url">
 <meta content="Adsense Privacy Policy" property="og:title">
 <meta content="Designed by worldwide professionals - Free Blogger Templates &amp; WordPress Themes for your blog. Download html5 templates available in 1, 2 or 3 columns" property="og:description">
@@ -30,8 +32,6 @@
 <meta content="english" name="Language">
 <meta content="Global" name="Distribution">
 <meta content="445D9EF6EC55EBFE83798C377B4E3D3D" name="msvalidate.01">
-<link type="text/css" rel="stylesheet" href="https://www.blogger.com/static/v1/widgets/454518911-widget_css_bundle.css">
-<link type="text/css" rel="stylesheet" href="https://www.blogger.com/dyn-css/authorization.css?targetBlogID=6170198181237469453&amp;zx=60400915-019b-4707-b77c-69c29201bc4a">
 <style id="page-skin-1" type="text/css"><!--
 /*
 /* -- BUTTON STYLE DEMO/DOWNLOAD -- */
@@ -1307,8 +1307,8 @@ color:#555;
 
 </script>
 <meta content="badf9572c748eb1368b246e2fcff50c8" name="verifyownership">
-<script type="text/javascript">function a(){var b=window.location.href,c=b.split("?");switch(c.length){case 1:return b+"?m=1";case 2:return 0<=c[1].search("(^|&)m=")?null:b+"&m=1";default:return null}}var d=navigator.userAgent;if(-1!=d.indexOf("Mobile")&&-1!=d.indexOf("WebKit")&&-1==d.indexOf("iPad")||-1!=d.indexOf("Opera Mini")||-1!=d.indexOf("IEMobile")){var e=a();e&&window.location.replace(e)};
-</script>
+<link href="https://www.blogger.com/dyn-css/authorization.css?targetBlogID=6170198181237469453&amp;zx=d4a3a0fc-a88f-4f95-8dfd-dadc1c48b647" rel="stylesheet">
+
 
 <script type="text/javascript"> 
 function lebel_logo(label) {
@@ -1419,6 +1419,7 @@ google_ad_height = 60;
 <div class="main section" id="main">
 <div class="widget Blog" data-version="1" id="Blog1">
 <div class="blog-posts hfeed">
+<!--Can't find substitution for tag [defaultAdStart]-->
 
 <div class="date-outer">
 
@@ -1484,6 +1485,7 @@ If you wish to disable cookies, you may do so through your individual browser op
 </div>
 
 </div></div>
+<!--Can't find substitution for tag [adEnd]-->
 </div>
 <center><script asyncsrc="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle" data-ad-client="ca-pub-5387562525969130" data-ad-slot="3692977201" style="display:inline-block;width:468px;height:60px"></ins>
@@ -1561,15 +1563,33 @@ Subscribe to:
 <h2>Pages</h2>
 <div class="widget-content">
 <ul>
-<li><a href="http://www.designcart.org/">Home</a></li>
-<li><a href="http://www.designcart.org/p/how-to-install-blogger-template.html">How to install a Blogger Template</a></li>
-<li><a href="http://www.designcart.org/p/how-to-install-blogger-template_6.html">How to install a Wordpress Theme</a></li>
-<li><a href="http://www.designcart.org/p/zcorporate-free-responsive-html5.html">Free Responsive Html5 Templates</a></li>
-<li><a href="http://www.designcart.org/p/blog-page_6581.html">Free Responsive HTML5 Templates</a></li>
-<li><a href="http://www.designcart.org/p/blog-page.html">Term of Use</a></li>
-<li><a href="http://www.designcart.org/p/about-us.html">About us</a></li>
-<li><a href="http://www.designcart.org/p/blog-page_15.html">Contact Us</a></li>
-<li><a href="http://www.designcart.org/p/adsense-privacy-policy.html">Adsense Privacy Policy</a></li>
+<li>
+<a href="http://www.designcart.org/">Home</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/how-to-install-blogger-template.html">How to install a Blogger Template</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/how-to-install-blogger-template_6.html">How to install a Wordpress Theme</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/zcorporate-free-responsive-html5.html">Free Responsive Html5 Templates</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/blog-page_6581.html">Free Responsive HTML5 Templates</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/blog-page.html">Term of Use</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/about-us.html">About us</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/blog-page_15.html">Contact Us</a>
+</li>
+<li>
+<a href="http://www.designcart.org/p/adsense-privacy-policy.html">Adsense Privacy Policy</a>
+</li>
 </ul>
 <div class="clear"></div>
 <span class="widget-item-control">
@@ -1797,15 +1817,15 @@ margin: 10px 10px 0px 10px;}
 </div><!-- END "div#footer_bottom" -->
 </div><!-- END "div#footer_bottom_wrapper" -->
 </div><!-- END "div#footer_wrapper" -->
+<script src="https://apis.google.com/js/plusone.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/803954089-widgets.js"></script>
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/3641759723-widgets.js"></script>
 <script type="text/javascript">
-window['__wavt'] = 'AOuZoY6wDUGszvHnCI397TA_46L2HPUHRA:1482141947807';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d6170198181237469453','//www.designcart.org/p/adsense-privacy-policy.html','6170198181237469453');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '6170198181237469453', 'bloggerUrl': 'https://www.blogger.com', 'title': 'Blogger Templates | Html5 Templates | WordPress Themes', 'pageType': 'static_page', 'pageId': '7095082687707894045', 'url': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'canonicalUrl': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'homepageUrl': 'http://www.designcart.org/', 'searchUrl': 'http://www.designcart.org/search', 'canonicalHomepageUrl': 'http://www.designcart.org/', 'blogspotFaviconUrl': 'http://www.designcart.org/favicon.ico', 'hasCustomDomain': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'useUniversalAnalytics': false, 'pageName': 'Adsense Privacy Policy', 'pageTitle': 'Blogger Templates | Html5 Templates | WordPress Themes: Adsense Privacy Policy', 'metaDescription': '', 'encoding': 'UTF-8', 'locale': 'en_GB', 'localeUnderscoreDelimited': 'en_gb', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'languageDirection': 'ltr', 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Blogger Templates | Html5 Templates | WordPress Themes - Atom\x22 href\x3d\x22http://www.designcart.org/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Blogger Templates | Html5 Templates | WordPress Themes - RSS\x22 href\x3d\x22http://www.designcart.org/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Blogger Templates | Html5 Templates | WordPress Themes - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/6170198181237469453/posts/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'mobileHeadScript': '', 'adsenseClientId': 'ca-pub-5387562525969130', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/0d81398a922284ce', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}}}, {'name': 'features', 'data': {'widgetVisibility': true}}, {'name': 'messages', 'data': {'linkCopiedToClipboard': 'Link copied to clipboard', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Adsense Privacy Policy', 'description': 'Designed by worldwide professionals - Free Blogger Templates \x26 WordPress Themes for your blog. Download html5 templates available in 1, 2 or 3 columns', 'url': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': true, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isSearch': false, 'isLabelSearch': false, 'pageId': 7095082687707894045}}]);
+window['__wavt'] = 'AOuZoY6OExP8jy_1HcEl-uis9Or-yXS5ug:1496488465484';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d6170198181237469453','//www.designcart.org/p/adsense-privacy-policy.html','6170198181237469453');
+_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '6170198181237469453', 'title': 'Blogger Templates | Html5 Templates | WordPress Themes', 'url': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'canonicalUrl': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'homepageUrl': 'http://www.designcart.org/', 'searchUrl': 'http://www.designcart.org/search', 'canonicalHomepageUrl': 'http://www.designcart.org/', 'blogspotFaviconUrl': 'http://www.designcart.org/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': true, 'httpsEnabled': false, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'en-GB', 'localeUnderscoreDelimited': 'en_gb', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Blogger Templates | Html5 Templates | WordPress Themes - Atom\x22 href\x3d\x22http://www.designcart.org/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Blogger Templates | Html5 Templates | WordPress Themes - RSS\x22 href\x3d\x22http://www.designcart.org/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Blogger Templates | Html5 Templates | WordPress Themes - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/6170198181237469453/posts/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'mobileHeadScript': '', 'adsenseClientId': 'ca-pub-8599219576830682', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/de69988a463c1469', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}, 'jumpLinkMessage': 'Read more &#187;', 'pageType': 'static_page', 'pageId': '7095082687707894045', 'pageName': 'Adsense Privacy Policy', 'pageTitle': 'Blogger Templates | Html5 Templates | WordPress Themes: Adsense Privacy Policy', 'metaDescription': ''}}, {'name': 'features', 'data': {'ga_social_hooks': 'false', 'unsupported_browser_message': 'false', 'lightbox_img_parsing': 'false', 'sharing_get_link_dialog': 'false'}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard', 'ok': 'Ok', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Adsense Privacy Policy', 'description': 'Designed by worldwide professionals - Free Blogger Templates \x26 WordPress Themes for your blog. Download html5 templates available in 1, 2 or 3 columns', 'url': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': true, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isLabelSearch': false, 'pageId': 7095082687707894045}}]);
 _WidgetManager._RegisterWidget('_LinkListView', new _WidgetInfo('LinkList10', 'menu-primary', null, document.getElementById('LinkList10'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML5', 'menu-primary', null, document.getElementById('HTML5'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/2371771562-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/368954415-lightbox_bundle.css'}, 'displayModeFull'));
+_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/1073670082-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/368954415-lightbox_bundle.css'}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML6', 'sidebar', null, document.getElementById('HTML6'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML2', 'sidebar', null, document.getElementById('HTML2'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_PageListView', new _WidgetInfo('PageList1', 'sidebar', null, document.getElementById('PageList1'), {'title': 'Pages', 'links': [{'isCurrentPage': false, 'href': 'http://www.designcart.org/', 'title': 'Home'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/how-to-install-blogger-template.html', 'id': '1321932889394129681', 'title': 'How to install a Blogger Template'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/how-to-install-blogger-template_6.html', 'id': '4568295044789382655', 'title': 'How to install a Wordpress Theme'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/zcorporate-free-responsive-html5.html', 'id': '2446796693881715849', 'title': 'Free Responsive Html5 Templates'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/blog-page_6581.html', 'id': '4389372089128770454', 'title': 'Free Responsive HTML5 Templates'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/blog-page.html', 'id': '2176673615794214366', 'title': 'Term of Use'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/about-us.html', 'id': '3728174590205145782', 'title': 'About us'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/blog-page_15.html', 'title': 'Contact Us'}, {'isCurrentPage': false, 'href': 'http://www.designcart.org/p/adsense-privacy-policy.html', 'title': 'Adsense Privacy Policy'}], 'mobile': false}, 'displayModeFull'));
