--- a/s/sn/sna/snapgrades.net.html
+++ b/s/sn/sna/snapgrades.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the snapgrades.net privacy policy that was archived on 2016-11-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161128000145id_/http%3A//www.jupitered.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the snapgrades.net privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605005953id_/http%3A//jupitered.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>Jupiter Ed Privacy Policy</title>
