xatspace.com (archived on 2017-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business",
  "char_count": 10049,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.01,
  "homepage_snapshot_redirected_domain": "xat.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170421062212id_/http://xat.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170421181914id_/http%3A//xatspace.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "xat.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170605044053id_/https%3A//xat.com/privacy.html",
  "policy_title": "xat privacy policy",
  "policy_url": "xat.com/privacy.html",
  "sha1": "a80fec6ac9f27ad2c49d37fe3d68f0d8ac59420d",
  "simhash": 16339090733772425676,
  "simhash_updated": false,
  "site_hostname": "xatspace.com",
  "site_url": "http://xatspace.com",
  "smog": 15.02,
  "strict_updated": false,
  "timestamp": "20170605044053",
  "word_count": 1628,
  "year": 2017
}

--- a/x/xa/xat/xatspace.com.html
+++ b/x/xa/xat/xatspace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xatspace.com privacy policy that was archived on 2016-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160620234404id_/https%3A//xat.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xatspace.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605044053id_/https%3A//xat.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
     <meta charset="utf-8">
@@ -7,24 +7,24 @@
     <title>xat privacy policy</title>
     <meta name="description" content="privacy">
     <meta name="viewport" content="width=device-width">
-    <!--<meta name="msapplication-TileImage" content="http://xat.com/images/win8-tile-144.png"/>  TODO: -->
+    <!--<meta name="msapplication-TileImage" content="//xat.com/images/win8-tile-144.png"/>  TODO: -->
     <meta name="msapplication-TileColor" content="#000033">
     <meta name="xcookie" content="big">
-    <meta name="xcb_js" content="YY6vE">
-    <meta name="xcb_l" content="oH7gcs">
-    <link href="http://xat.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <meta name="xcb_js" content="yHv2">
+    <meta name="xcb_l" content="996Vc">
+    <link href="//xat.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="dns-prefetch" href="//www.xatech.com">
-    <link rel="stylesheet" type="text/css" href="http://xat.com/css/bootstrap.min.css?v=YY6vE">
-	    <link rel="stylesheet" type="text/css" href="http://xat.com/css/bootstrap-responsive.min.css?v=YY6vE"> 
-	    <link rel="stylesheet" type="text/css" href="http://xat.com/css/animate.css?v=YY6vE">
-    <link rel="stylesheet" type="text/css" href="http://xat.com/css/main.css?v=YY6vE">
-    <link rel="stylesheet" type="text/css" href="http://xat.com/css/cookiecuttr.css?v=YY6vE">
-    <link rel="stylesheet" type="text/css" href="http://xat.com/css/smallprint.css?v=YY6vE">
-    <script src="http://xat.com/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js?v=YY6vE"></script>
+    <link rel="stylesheet" type="text/css" href="//xat.com/css/bootstrap.min.css?v=yHv2">
+	    <link rel="stylesheet" type="text/css" href="//xat.com/css/bootstrap-responsive.min.css?v=yHv2"> 
+	    <link rel="stylesheet" type="text/css" href="//xat.com/css/animate.css?v=yHv2">
+    <link rel="stylesheet" type="text/css" href="//xat.com/css/main.css?v=yHv2">
+    <link rel="stylesheet" type="text/css" href="//xat.com/css/cookiecuttr.css?v=yHv2">
+    <link rel="stylesheet" type="text/css" href="//xat.com/css/smallprint.css?v=yHv2">
+    <script src="//xat.com/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js?v=yHv2"></script>
 </head>
 <body>
         <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="//browsehappy.com/">upgrade your browser</a> or <a href="//www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 <!--/head-->
 
@@ -75,12 +75,12 @@
                         <ul class="dropdown-menu">
 <!--                            <li><a href="//xat.com/about.php"><i class="xicon-about"></i>&nbsp;<span data-localize="main.about">About</span></a></li> -->
                             <li><a href="//xat.com/twitter"><i class="xicon-twitter"></i>&nbsp;<span data-localize="main.twitter">Twitter</span></a></li>
-                            <li><a href="//xat.com/web_gear/chat/chats.php?v=YY6vE&amp;type=wiki"><i class="xicon-wiki"></i>&nbsp;<span data-localize="main.wiki">Wiki</span></a></li>
+                            <li><a href="//xat.com/web_gear/chat/chats.php?v=yHv2&amp;type=wiki"><i class="xicon-wiki"></i>&nbsp;<span data-localize="main.wiki">Wiki</span></a></li>
                             <li><a href="//xat.com/support"><i class="xicon-support"></i>&nbsp;<span data-localize="main.support">Support</span></a></li>
                             <li><a href="//xat.com/ticket"><i class="xicon-contact"></i>&nbsp;<span data-localize="main.contact">Contact</span></a></li>
                             <li class="divider"></li>
-                            <li><a href="//xat.com/web_gear/chat/chats.php?v=YY6vE&amp;type=help"><i class="xicon-help"></i>&nbsp;<span data-localize="main.help">Help</span></a></li>
-                            <li><a href="//xat.com/web_gear/chat/chats.php?v=YY6vE&amp;type=trade"><i class="icon-star"></i>&nbsp;<span data-localize="main.trade">Trade</span></a></li>
+                            <li><a href="//xat.com/web_gear/chat/chats.php?v=yHv2&amp;type=help"><i class="xicon-help"></i>&nbsp;<span data-localize="main.help">Help</span></a></li>
+                            <li><a href="//xat.com/web_gear/chat/chats.php?v=yHv2&amp;type=trade"><i class="icon-star"></i>&nbsp;<span data-localize="main.trade">Trade</span></a></li>
                             <li class="divider"></li>
                             <li><a href="//xat.com/web_gear/index.php"><i class="icon-tasks"></i>&nbsp;<span data-localize="main.widgets">Widgets</span></a></li>
                         </ul>
@@ -215,20 +215,20 @@ We use third-party advertising companies to serve ads when you visit our website
         <li><a href="//xat.com/support" title="Support" data-localize="main.support">Support</a></li>
         <li><a href="//xat.com/ticket" title="Contact" data-localize="main.contact">Contact</a></li>
         </ul>
-        <p>© 2016 xat.com Ltd. All rights reserved.</p>
+        <p>© 2017 xat.com Ltd. All rights reserved.</p>
     </footer>
     </div>
 <!--/footer-->
 <!--foot-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="http://xat.com/js/vendor/jquery-1.9.1.min.js?v=YY6vE"><\/script>')</script><script src="http://xat.com/js/vendor/jquery-1.9.1.min.js?v=YY6vE"></script>
-    <script src="http://xat.com/js/vendor/jquery.cookie.js?v=YY6vE"></script>
-    <script src="http://xat.com/js/vendor/jquery.cookiecuttr.js?v=YY6vE"></script>
-    <script src="http://xat.com/js/vendor/bootstrap.min.js?v=YY6vE"></script>
-    <script src="http://xat.com/js/plugins.js?v=YY6vE"></script>
-    <script src="http://xat.com/js/vendor/jquery.localize.js?v=YY6vE"></script>
-        <script src="http://xat.com/js/main.js?v=YY6vE"></script>
-    <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+    <script>window.jQuery || document.write('<script src="//xat.com/js/vendor/jquery-1.9.1.min.js?v=yHv2"><\/script>')</script><script src="//xat.com/js/vendor/jquery-1.9.1.min.js?v=yHv2"></script>
+    <script src="//xat.com/js/vendor/jquery.cookie.js?v=yHv2"></script>
+    <script src="//xat.com/js/vendor/jquery.cookiecuttr.js?v=yHv2"></script>
+    <script src="//xat.com/js/vendor/bootstrap.min.js?v=yHv2"></script>
+    <script src="//xat.com/js/plugins.js?v=yHv2"></script>
+    <script src="//xat.com/js/vendor/jquery.localize.js?v=yHv2"></script>
+        <script src="//xat.com/js/main.js?v=yHv2"></script>
+    <script src="//www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1813155-1";
