--- a/f/fl/fly/flysketch.com.html
+++ b/f/fl/fly/flysketch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flysketch.com privacy policy that was archived on 2016-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161122234235id_/http%3A//flysketch.com/page-privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flysketch.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605114150id_/http%3A//flysketch.com/page-privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -9,7 +9,7 @@
     <title>FlySketch.com | Privacy Policy</title>
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/main.css?116">
+    <link rel="stylesheet" href="/css/main.css?357">
     <link href="//fonts.googleapis.com/css?family=Arvo:n,b,i,bi|Open+Sans:n,b,i,bi|Oswald:n,b|Play:n,b|Quattrocento:n,b&amp;subset=Latin,Cyrillic,Cyrillic-ext,Greek,Greek-ext,Latin-ext,Vietnamese" rel="stylesheet" type="text/css">
 </head>
 <body class="pages pace-running"><div class="pace pace-active"><div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
@@ -104,7 +104,7 @@
                     </ul>
                 </nav>
                 <div class="copyright right">
-                    <p>© Jump.fm 2013-2016. ALL RIGHT RESERVED.</p>
+                    <p>© Jump.fm 2013-2017. ALL RIGHT RESERVED.</p>
                 </div>
             </div>
         </footer>
@@ -112,6 +112,10 @@
     <script src="/js/pace.min.js"></script>
     <script type="text/javascript" src="/js/search.js"></script>
     %ga%
+    
+<div style="position: absolute;height: 30px;background: red;width: 100%;line-height: 30px;font-size: 16px;color:#fff;background: #eee;border:0;text-align: center;z-index: 1111111;">
+        <a href="http://moonsearch.com/provider/">Best hosting Providers sorted by domain names.</a>
+    </div>
 
 
 </body></html>
