asdesigning.com (archived on 2017-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 4348,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.43,
  "homepage_snapshot_redirected_domain": "asdesigning.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170420030546id_/http://asdesigning.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170420030546id_/http%3A//asdesigning.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "asdesigning.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170605180348id_/http%3A//asdesigning.com/policy",
  "policy_title": "Privacy Policy - Best Joomla! Templates | Professional Wordpress Themes",
  "policy_url": "asdesigning.com/policy",
  "sha1": "73fa8fd944c3d4c73ef9c559e5e99dd1eb4e6b4b",
  "simhash": 2119352758554031065,
  "simhash_updated": false,
  "site_hostname": "asdesigning.com",
  "site_url": "http://asdesigning.com",
  "smog": 12.91,
  "strict_updated": false,
  "timestamp": "20170605180348",
  "word_count": 695,
  "year": 2017
}

--- a/a/as/asd/asdesigning.com.html
+++ b/a/as/asd/asdesigning.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the asdesigning.com privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221145419id_/http%3A//www.asdesigning.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the asdesigning.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605180348id_/http%3A//asdesigning.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	
@@ -246,7 +246,7 @@ Creating statistics that help website owners to understand how their users inter
                     </div>  
                     <p class="copyright">
                         <a href="http://alechkostudio.com/" title="Designed by AS Designing" target="_blank">
-                        Copyright © 2010 - 2016 : Alechko Studio Ltd</a><br>
+                        Copyright © 2010 - 2017 : Alechko Studio Ltd</a><br>
                         BN: 80701 4774 RC0001  
                     </p>                                  
                 </div>                
