--- a/e/er/ero/eroticstories.com.html
+++ b/e/er/ero/eroticstories.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eroticstories.com privacy policy that was archived on 2016-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161127163329id_/http%3A//eroticstories.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eroticstories.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605195041id_/http%3A//www.eroticstories.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
