--- a/h/hi/hig/highereducationinindia.com.html
+++ b/h/hi/hig/highereducationinindia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the highereducationinindia.com privacy policy that was archived on 2016-11-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161125160502id_/http%3A//www.highereducationinindia.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the highereducationinindia.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605202232id_/http%3A//highereducationinindia.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//SoftQuad//DTD HoTMetaL PRO 4.0::19971010::extensions to HTML 4.0//EN" "hmpro4.dtd"><html><head>
 <title>Higher Education in India :: Privacy Policy</title>
